# rainbowcoat

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: coat.rs  crab.rs  hipsum.rs
implementors/std/io/: trait.Write.js
rainbowcoat/: Colors.t.html  fn.stdout.html  index.html  sidebar-items.js  struct.Colors.html
src/: .travis.yml  README.md  lib.rs
src/rainbowcoat/: lib.rs.html
